@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-02-14 Fri 00:16 -->
+<!-- 2025-02-15 Sat 15:25 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-02-14 00:16:27</i></td>
+<td class="org-left"><i>2025-02-15 15:25:15</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-02-14 00:16:30</i></td>
+<td class="org-left"><i>2025-02-15 15:25:17</i></td>
 </tr>
 </tbody>
 </table>
@@ -355,6 +355,7 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 <li>Added IncludeMRMathCPPLib.cmake code</li>
 <li>Updated version of configure.sh</li>
 <li>Updated mrw2any.sh &amp;</li>
+<li>Uniform use of if constexpr.</li>
 </ul></li>
 </ul>
 </div>
